--- a/package.json
+++ b/package.json
@@ -16,18 +16,21 @@
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.0.4",
     "@mui/material": "^5.0.4",
+    "@nextui-org/react": "^2.2.9",
     "body-parser": "^1.19.1",
     "express": "^4.17.1",
+    "framer-motion": "^11.0.3",
     "http-proxy-middleware": "^2.0.1",
     "lodash": "^4.17.21",
     "next": "^11.0.0",
     "next-auth": "^4.1.2",
     "node-fetch": "^3.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-image-gallery": "^1.2.7",
     "request": "^2.88.2",
     "request-cookies": "^1.1.0",
+    "tailwindcss": "^3.4.1",
     "xlsx-to-json": "^0.3.0"
   },
   "devDependencies": {
