--- a/package.json
+++ b/package.json
@@ -16,10 +16,17 @@
     "@nextui-org/react": "^2.2.9",
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/theme": "^2.1.17",
+    "formik": "^2.4.5",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
+    "nodemailer": "^6.9.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-email": "^2.1.0",
+    "react-phone-input-2": "^2.15.1",
+    "sass": "^1.72.0",
+    "yup": "^0.32.11",
+    "yup-phone": "^1.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
