--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "formik": "^2.4.5",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
+    "next-intl": "^3.10.0",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
