--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.9",
+    "@next/third-parties": "^14.1.4",
     "@nextui-org/react": "^2.2.9",
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/theme": "^2.1.17",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.3",
-    "next": "14.1.0",
+    "next": "^14.1.4",
     "next-intl": "^3.10.0",
     "nodemailer": "^6.9.13",
     "react": "^18",
